# finance_trader

./: README.md  pyproject.toml  requirements.txt
src/agents/: financial_agent.py
src/api/: main.py
src/api/static/: index.html
src/data/: __init__.py  cache.py  fetchers.py  schemas.py
src/graphs/: __init__.py  financial_graph.py
src/llm/: __init__.py  provider.py
src/nodes/: __init__.py  analyzer.py  base.py  data_loader.py  error_handler.py  input_validator.py  node_base.py  routers.py  synthesizer.py
src/state/: __init__.py  agent_state.py
src/tools/: __init__.py  data_extractor.py  metrics.py
tests/: test_advanced.py  test_data.py  test_graphs.py  test_llm.py
